--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -20,6 +20,10 @@
                         <td>Preis</td>
                         <td>€ {{ $score.price }},-</td>
                     </tr>
+                    <tr>
+                        <td>Besetzung</td>
+                        <td>{{.Params.instruments}}</td>
+                    </tr>
                 </table>
                 <div style="margin: 4rem 0" class="label">
                     Hörbeispiel
